# PWGL-community-library

./: README.md
User-library/: pd-OSC.pd
User-library/Coll2LISP/: Coll2LISP.asd  Coll2LISP.lisp  menus.lisp  package.lisp  standard-lisp-code.lisp
User-library/EWQLSO/: EWQLSO-orchestra copy.lisp  EWQLSO.asd  EWQLSO.lisp  VSL-orchestra.lisp  test.lisp
User-library/FDSDB_XXth_CT/: FDSDB_XXth_CT.asd  FDSDB_XXth_CT.lisp  boxes.lisp  lib-properties.txt  menus.lisp  package.lisp  standard-lisp-code.lisp
User-library/FLAT/: flat.asd  lib-properties.txt
User-library/GeneticAlgorithm/: GeneticAlgorithm.asd  GeneticAlgorithm.lisp  GeneticAlgorithmBox.lisp  additions.lisp  combineFitnessFcns.lisp  combineFitnessFcnsBox.lisp  ex04-musicalExample.pwgl  menus.lisp  package.lisp  standard-lisp-code.lisp  trueFalseToFitness.lisp  trueFalseToFitnessBox.lisp  utilities.lisp
User-library/M2T/: M2T.asd  M2T.lisp  package.lisp
User-library/Matrix/: Matrix.asd  Matrix.lisp  menus.lisp  package.lisp
User-library/MotifExtraction/: ConvertToPatternFreqPairBox.lisp  FilterResultsBox.lisp  FitnessFunctionBoxes.lisp  GetSingletonsBox.lisp  MotifExtraction.asd  MotifExtraction.lisp  (+9 more)
User-library/ksquant2-0.1.10/: .gitignore  AbstractScore.hs  Enp.hs  Input.hs  Interval.hs  IntervalTest.hs  KS.hs  Lily.hs  Lisp.hs  LispTest.hs  Main.hs  Makefile  Measure.hs  MeasureTest.hs  MeasureToEnp.hs  MeasureToEnpTest.hs  MeasureToLily.hs  README  SimpleFormat.hs  SimpleFormat2.hs  SimpleFormatTest.hs  StateTest.hs  SubseqUtils.hs  Test.hs  Unused.hs  Utils.hs  cruise-build.rb  kernel  ksquant2.asd  ksquant2.cabal
User-library/ksquant2-0.1.10/examples/: sample-input.lisp  simple-format-01.lisp  simple-format-02.lisp  simple-format-03.lisp
User-library/ksquant2-0.1.10/lisp/: boxes-test.lisp  boxes.lisp  package.lisp  test-runner.lisp
User-library/ksquant2-0.1.10/shell-tests/: accents.lisp  do-not-join-beams.lisp  enharmonic.lisp  five-over-four.lisp  just-four-quarters-and-measure-rest.lisp  just-four-quarters-rest.lisp  just-four-quarters.lisp  pitches.lisp  quarter-rest-keyword.lisp  quarter-rest-start.lisp  quarter-rest.lisp  tempo120.lisp  two-bars.lisp  two-halves.lisp
User-library/ksquant2-0.1.10/shell-tests/known-to-fail/: 16th-to-8th.lisp  quintuplets.lisp
User-library/ksquant2-0.1.10/tutorial/: simple-test.pwgl  simple2score-defaults.pwgl
User-library/ksquant2-0.1.10/utils/: download-haskell-mode.sh  ksquant2-dist.rb  link.sh  setup.el  subseq-algo.lisp  test-cases.lisp
User-library/sdif-svp/SDIF-3.10.5-src/macosxbuild/SDIF.pbproj/: Makefile  Makefile.am  project.pbxproj
User-library/sdif-svp/SDIF-3.10.5-src/macosxbuild/SDIF.xcodeproj/: Makefile.am  Makefile.in  mika.mode1  mika.mode1v3  mika.pbxuser  project.pbxproj
User-library/sdif/SDIF-3.10.5-src/macosxbuild/: Makefile  Makefile.am  Makefile.in  README.MacOSX
User-library/sdif/SDIF-3.10.5-src/macosxbuild/SDIF.pbproj/: Makefile  Makefile.in
User-library/sdif/SDIF-3.10.5-src/macosxbuild/SDIF.xcode/: Makefile  project.pbxproj
(+2010 files in other folders)
