# $Id: Makefile.am,v 1.2 2004/01/29 13:36:28 schwarz Exp $
#
# SDIF/macosxbuild/SDIF.pbxproj/Makefile.am	
#
# just to include Mac ProjectBuilder compilation project to source
# distribution
#
# $Log: Makefile.am,v $
# Revision 1.2  2004/01/29 13:36:28  schwarz
# add xcode to dist
# redefinition of distdir seems no longer necessary
#
# Revision 1.1  2003/06/13 10:05:41  schwarz
# Added latest projectbuilder mac os X project to cvs and dist.
# Library version is 3.8.0-beta until we decide to announce the official release,
# to avoid confusion.
#

# distdir		= ../../$(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= project.pbxproj

all:
		echo "Use Apple ProjectBuilder to build for Mac OS X"
