# $Id: Makefile.am,v 1.2 2004/01/29 13:36:28 schwarz Exp $
#
# SDIF/macosxbuild/SDIF.xcode/Makefile.am	
#
# just to include Mac XCODE compilation project to source
# distribution
#
# $Log: Makefile.am,v $
# Revision 1.2  2004/01/29 13:36:28  schwarz
# add xcode to dist
# redefinition of distdir seems no longer necessary
#
# Revision 1.1  2004/01/14 11:34:32  schwarz
# Added Riccardo's xcode project.


# distdir		= ../../$(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= project.pbxproj

all:
		echo "Use Apple Xcode to build for Mac OS X"
